tables with no identity pk

--- a/Theme_17/Exp05_SqlDataAdapter_DataSet/App.config
+++ b/Theme_17/Exp05_SqlDataAdapter_DataSet/App.config
@@ -3,12 +3,12 @@
 	<connectionStrings>
 		<add
 			name="DefaultConfiguration"
-			connectionString="Data Source=.;Initial Catalog=master;Integrated Security=true;Pooling=true;"
+			connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=true;Pooling=true;"
 			providerName="System.Data.SqlClient"
 		/>
 		<add
 			name="GoodBank"
-			connectionString="Data Source=.;Initial Catalog=MyDB;Integrated Security=true;Pooling=true;"
+			connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MyDB;Integrated Security=true;Pooling=true;"
 			providerName="System.Data.SqlClient"
 		/>
 	</connectionStrings>
